Actualizacion de proyecto final
Cambio de los mq, para mejores visualizaciones. Cambio de detalles como lorem por textos relacionados a las imagenes. Actualizacion de los interlinks para que respondan

--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BEE ME</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -181,10 +181,10 @@
                 Empresa
               </h6>
               <p>
-                <a href="/index.html" class="text-reset">Home</a>
+                <a href="./index.html" class="text-reset">Home</a>
               </p>
               <p>
-                <a href="/shop.html" class="text-reset">Shop</a>
+                <a href="./shop.html" class="text-reset">Shop</a>
               </p>
               <p>
                 <a href="./nosotros.html" class="text-reset">Nosotros</a>
