--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BEE ME</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -96,7 +96,7 @@
       <div class="container marketing">
     
         <!-- Three columns of text below the carousel -->
-        <div class="row">
+        <div class="row row_centrado">
           <div class="col-lg-4">
             <img class="bd-placeholder-img rounded-circle" src="./img/perfil-02.png" width="140" height="140" background="cover"  role="img"  preserveAspectRatio="xMidYMid cslice" focusable="true"><rect width="100%" height="100%" fill="#ccc"/>
     
@@ -128,7 +128,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading"><span class="text-muted"></span></h2>
-            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, animi numquam reiciendis nobis, tempora eligendi qui minus temporibus, culpa eius unde. Recusandae laborum, totam facilis sed odit fuga eveniet ducimus.</p>
+            <p class="lead">Podes encontrar nuestros locales en tienda fisica u online, siempre con la mejor atencion de parte de nuestro staf.</p>
           </div>
           <div class="col-md-5">
             <img src="./img/nosotros-02.jpg" alt="">
@@ -141,7 +141,7 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading"><span class="text-muted"></span></h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis sed, vero accusantium aperiam voluptas modi voluptates rerum nostrum laboriosam dolore voluptatum unde veritatis. Atque doloremque quia consequatur voluptatum aperiam.</p>
+            <p class="lead">En todas nuestras tiendas recibimos diferentes medios de pago, ya sea efectivo, debito o credito. Tambien tenes planes de cuotas sin interes para que puedas llevarte todo!</p>
           </div>
           <div class="col-md-5 order-md-1">
             <img src="./img/nosotros-01.jpg" alt="">
@@ -154,7 +154,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading"><span class="text-muted"></span></h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, at enim architecto quisquam deleniti unde. Consequuntur repellendus sit temporibus, nam eos ipsa nesciunt perspiciatis? Veniam quidem iusto labore optio nisi?</p>
+            <p class="lead">El horario de atencion en tienda fisica es de lunes a domingo de 9:00hs a 22:00hs. En la tienda online podes comprar todos los dias las 24hs del dia. El stock se renueva constantemente para que no te pierdas nada y los envios se hacen full flash.</p>
           </div>
           <div class="col-md-5">
             <img src="./img/nosotros-03.jpg" alt="">
